objects/Zip_User_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Regional Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Zip_User_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>130</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <externalId>true</externalId>
        <label>Zip Code</label>
        <length>5</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Zip User Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Zip_Code__c</columns>
        <columns>City__c</columns>
        <columns>County__c</columns>
        <columns>State__c</columns>
        <columns>Territory__c</columns>
        <columns>Regional_Manager__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ZUM-{00000}</displayFormat>
        <label>Zip User Mapping Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Zip User Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>